--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,7 @@
         tools:targetApi="31">
         <activity
             android:name=".UpdateDonation"
-            android:exported="false" />
+            android:exported="true" />
         <activity
             android:name=".Viewdonation"
             android:exported="true" />
