--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,22 +12,28 @@
         android:theme="@style/Theme.Project_Management"
         tools:targetApi="31">
         <activity
-            android:name=".UpdateDonation"
+            android:name=".activities.DonationDetailsActivity"
+            android:exported="false" />
+        <activity
+            android:name=".activities.ProjectDetailsActivity"
+            android:exported="false" />
+        <activity
+            android:name=".activities.UpdateDonation"
             android:exported="true" />
         <activity
-            android:name=".Viewdonation"
+            android:name=".activities.Viewdonation"
             android:exported="true" />
         <activity
-            android:name=".AddDonation"
+            android:name=".activities.AddDonation"
             android:exported="true" />
         <activity
-            android:name=".Updateproject"
+            android:name=".activities.Updateproject"
             android:exported="true" />
         <activity
-            android:name=".Viewproject"
+            android:name=".activities.Viewproject"
             android:exported="true" />
         <activity
-            android:name=".Addproject"
+            android:name=".activities.Addproject"
             android:exported="true" />
         <activity
             android:name=".MainActivity"
